tests/spirits/errors/empty_exegesis.dol
// Test: Empty docs block
// Expected: Should warn - docs should not be empty

pub gen EmptyExegesis {
    has id: UInt64
}

docs {
}
